fix figure caption when image is not wrapped in <p>

--- a/_sass/_classes.scss
+++ b/_sass/_classes.scss
@@ -25,7 +25,7 @@
     margin: auto;
     border: none;
 }
-.figure > p + p {
+.figure > *:last-child:not(:only-child) {
     color: rgba($font-color, 0.7);
     margin-top: 0.75em;
     text-align: center;
